fixed blog text align

--- a/src/pages/Blog.scss
+++ b/src/pages/Blog.scss
@@ -32,4 +32,8 @@
       margin-top: 1.5em;
     }
   }
+
+  p {
+    text-align: left;
+  }
 }
